<resources>
    <string name="app_name">Start Proyect</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Registrar</string>

    <string-array name="ubicaciones_array">
        <item>Islas de la Bahia</item>
        <item>Cortes</item>
        <item>Atlantida</item>
        <item>Colon</item>
        <item>Gracias a Dios</item>
        <item>Copan</item>
        <item>Santa Barbara</item>
        <item>Yoro</item>
        <item>Olancho</item>
        <item>Lempira</item>
        <item>Ocotepeque</item>
        <item>Intibuca</item>
        <item>Comayagua</item>
        <item>Francisco Morazan</item>
        <item>El Paraiso</item>
        <item>La Paz</item>
        <item>Valle</item>
        <item>Choluteca</item>
    </string-array>

    <!-- Strings related to login -->
    <string name="prompt_telefono">Telefono</string>
    <string name="prompt_nombre">Nombre</string>
    <string name="prompt_identidad">Identidad</string>
    <string name="prompt_email">Correo Electronico</string>
    <string name="prompt_centro_educativo">Centro Educativo</string>
    <string name="prompt_ubicacion">Ubicacion</string>

    <string name="profesor">Profesor</string>
    <string name="estudiante">Estudiante</string>
    <string name="padre_familia">Padre Familia</string>
    <string name="continuar">  Continuar  </string>
    <string name="subtitle_centro_educativo">Seleccione el centro educativo... </string>

    <string name="action_sign_in">Registrar</string>
    <string name="title_reportar">¿A quien desea reportar?</string>
    <string name="subtitle_jornadas">Jornadas</string>
    <string name="subtitle_grados">Grados</string>
    <string name="subtitle_secciones">Secciones</string>


    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_si">Si Hay Clases</string>
    <string name="title_activity_no">No Hay Clases</string>
    <string name="title_activity_seleccionar">¿A quien desea registrar?</string>

    <!--Facebook-->

    <string name="facebook_app_id" translatable="false">165878997098584</string>
</resources>
